[explorer] - add details to tx page, fix some styling bugs (#11810)
## Description 

Continuation of [11753](https://github.com/MystenLabs/sui/pull/11753),
which I closed in order to break up the work.

- Adds Sender, Executed Epoch, Timestamp, to the transaction page
- Fixes a few styling / layout issues including mobile footer issues



## Test Plan 

How did you test the new or updated feature?

---
If your changes are not user-facing and not a breaking change, you can
skip the following section. Otherwise, please indicate what changed, and
then add to the Release Notes section as highlighted during the release
process.

### Type of Change (Check all that apply)

- [ ] user-visible impact
- [ ] breaking change for a client SDKs
- [ ] breaking change for FNs (FN binary must upgrade)
- [ ] breaking change for validators or node operators (must upgrade
binaries)
- [ ] breaking change for on-chain data layout
- [ ] necessitate either a data wipe or data migration

### Release notes

--- a/apps/explorer/src/index.css
+++ b/apps/explorer/src/index.css
@@ -2,6 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+#root {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
 /* Define some colors as CSS variables for use outside of the Tailwind class context: */
 :root {
     --success-light: theme('colors.success.light');
